feat: added decodeAccessList()

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,7 @@
+DEP_DIR := ../src
 SRC_DIR := ./src
 OBJ_DIR := ./obj
+DEP_FILES := $(wildcard $(DEP_DIR)/*.mo)
 SRC_FILES := $(wildcard $(SRC_DIR)/*.mo)
 WASM_FILES := $(patsubst $(SRC_DIR)/%.mo,$(OBJ_DIR)/%.wasm,$(SRC_FILES))
 
@@ -9,6 +11,6 @@ default: $(WASM_FILES)
 clean:
 	rm -f $(WASM_FILES)
 
-$(OBJ_DIR)/%.wasm: $(SRC_DIR)/%.mo
+$(OBJ_DIR)/%.wasm: $(SRC_DIR)/%.mo $(DEP_FILES)
 	$(shell vessel bin)/moc $(shell vessel sources) -wasi-system-api -o $@ $<
 
